Fixing Styling Scrollbar
Update css

--- a/public/auditor/css/styles.css
+++ b/public/auditor/css/styles.css
@@ -762,6 +762,10 @@ label.error {
 }
 
 ::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.15) !important;
+}
+
+.sidebar__content::-webkit-scrollbar-track {
   background: rgba(255, 255, 255, 0.1) !important;
 }
 
